--- a/project/part5/deployments/deployments.html
+++ b/project/part5/deployments/deployments.html
@@ -94,7 +94,7 @@
                 <h3>Software On‑Premise</h3>
                 <p>Installed and operated within your own data centers for maximum control, security, and compliance.</p>
             </div>
-            <img src="./images/deploy-onprem.jpg" alt="On-Premise Deployment">
+            <img src="./images/deploy-onprem.jpg" height="200px" width="200px" alt="On-Premise Deployment">
         </div>
 
         <!-- Cloud -->
@@ -103,7 +103,7 @@
                 <h3>Software in the Cloud</h3>
                 <p>Fully managed cloud‑based solutions with elastic scalability, automatic updates, and reduced infrastructure overhead.</p>
             </div>
-            <img src="./images/deploy-cloud.jpg" alt="Cloud Deployment">
+            <img src="./images/deploy-cloud.jpg" height="200px" width="200px" alt="Cloud Deployment">
         </div>
 
         <!-- Hybrid -->
@@ -112,7 +112,7 @@
                 <h3>Hybrid Software</h3>
                 <p>Combine on‑premise infrastructure with cloud‑based services for a flexible, scalable hybrid environment.</p>
             </div>
-            <img src="./images/deploy-hybrid.jpg" alt="Hybrid Deployment">
+            <img src="./images/deploy-hybrid.jpg" height="200px" width="200px" alt="Hybrid Deployment">
         </div>
 
     </div>
