--- a/project/part5/licensing/licensing.html
+++ b/project/part5/licensing/licensing.html
@@ -27,32 +27,33 @@
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
         <div class="dropdown-content">
-            <a href="index.html">Home</a>
-            <a href="login.html">Login</a>
-            <a href="logout.html">Logout</a>
-            <a href="welcome.html">Welcome</a>
-            <a href="licenses.html">Licenses</a>
-            <a href="reviews.html">AllReviews</a>
-            <a href="mylicenselogs.html">MyLicenseLogs</a>
-            <a href="mylicenses.html">MyLicenses</a>
-            <a href="./pricing/wizard.html">PricingWizard</a>
-            <a href="mycart.html?uid=1">MyCart</a>
-            <a href="myprofile.html">MyProfile</a>
-            <a href="testimonials.html">AdminTestimonials</a>
-            <a href="products.html">AdminProducts</a>
-            <a href="licensetypes.html">AdminLicenseTypes</a>
-            <a href="template.html">AdminPageTemplate</a>
+            <a href="../index.html">Home</a>
+            <a href="../login.html">Login</a>
+            <a href="../logout.html">Logout</a>
+            <a href="../welcome.html">Welcome</a>
+            <a href="../licenses.html">Licenses</a>
+            <a href="../deployments.html">Deployments</a>
+            <a href="../reviews.html">AllReviews</a>
+            <a href="../mylicenselogs.html">MyLicenseLogs</a>
+            <a href="../mylicenses.html">MyLicenses</a>
+            <a href="../pricing/wizard.html">PricingWizard</a>
+            <a href="../mycart.html?uid=1">MyCart</a>
+            <a href="../myprofile.html">MyProfile</a>
+            <a href="../testimonials.html">AdminTestimonials</a>
+            <a href="../products.html">AdminProducts</a>
+            <a href="../licensetypes.html">AdminLicenseTypes</a>
+            <a href="../template.html">AdminPageTemplate</a>
         </div>
     </div>
 
     <div class="right-links" style="display:flex; gap:6px; align-items:center; color:white;">
-        <md-text-button class="icon-only" href="index.html"><span class="material-icons">home</span></md-text-button>
-        <md-text-button class="icon-only" href="userhelp.html"><span class="material-icons">help_outline</span></md-text-button>
-        <md-text-button class="icon-only" href="usernotices.html"><span class="material-icons">notifications</span></md-text-button>
-        <md-text-button class="icon-only" href="login.html"><span class="material-icons">login</span></md-text-button>
-        <md-text-button class="icon-only" href="logout.html"><span class="material-icons">logout</span></md-text-button>
-        <md-text-button class="icon-only" href="myprofile.html"><span class="material-icons">person</span></md-text-button>
-        <md-text-button class="icon-only" href="mycart.html"><span class="material-icons">shopping_cart</span></md-text-button>
+        <md-text-button class="icon-only" href="../index.html"><span class="material-icons">home</span></md-text-button>
+        <md-text-button class="icon-only" href="../userhelp.html"><span class="material-icons">help_outline</span></md-text-button>
+        <md-text-button class="icon-only" href="../usernotices.html"><span class="material-icons">notifications</span></md-text-button>
+        <md-text-button class="icon-only" href="../login.html"><span class="material-icons">login</span></md-text-button>
+        <md-text-button class="icon-only" href="../logout.html"><span class="material-icons">logout</span></md-text-button>
+        <md-text-button class="icon-only" href="../myprofile.html"><span class="material-icons">person</span></md-text-button>
+        <md-text-button class="icon-only" href="../mycart.html"><span class="material-icons">shopping_cart</span></md-text-button>
     </div>
 </div>
 
