--- a/project/part5/licensing/licensing.html
+++ b/project/part5/licensing/licensing.html
@@ -69,43 +69,14 @@
 <!-- INTERIOR NAV (KEEP)       -->
 <!-- ========================= -->
 <nav>
-    <ul class="menu">
-        <li><a href="licenses6.html">Products</a></li>
-
-        <li class="dropdown">
-            <a href="./deployments/deployments.html">Deployment ▾</a>
-            <ul class="dropdown-content">
-                <li><a href="#onprem">On‑Premise</a></li>
-                <li><a href="#cloud">Cloud</a></li>
-                <li><a href="#hybrid">Hybrid</a></li>
-            </ul>
-        </li>
-
-        <li class="dropdown">
-            <a href="./licensing/licensing.html">Licensing ▾</a>
-            <ul class="dropdown-content">
-                <li><a href="#utility">Utility Hours</a></li>
-                <li><a href="#namedusers">Named Users</a></li>
-                <li><a href="#buel">Business Unit Enterprise</a></li>
-                <li><a href="#enterprise">Enterprise License Types</a></li>
-            </ul>
-        </li>
-
-        <li class="dropdown">
-            <a href="pricing.html">Pricing ▾</a>
-            <ul class="dropdown-content">
-                <li><a href="pricing.html">All Licenses</a></li>
-                <li><a href="./pricing/wizard.html">Wizard</a></li>
-                <li><a href="pricing.html./pricing/pricing.html-enterprise">Enterprise</a></li>
-                <li><a href="pricing.html./pricing/pricing.html-cloud">Cloud</a></li>
-                <li><a href="pricing.html./pricing/pricing.html-onprem">On‑Premise</a></li>
-                <li><a href="pricing.html./pricing/pricing.html-utility">Utility Model</a></li>
-            </ul>
-        </li>
-
-        <li><a href="contacts.html">Contact Sales</a></li>
-    </ul>
+        <ul class="menu">
+        <li><a href="#">Licenses</a></li>
+        <li><a href="deployments.html">Deployments</a></li>
+        <li><a href="../pricing/pricing.html">Pricing</a></li>
+        <li><a href="../contacts.html">Contact Sales</a></li>
+        </ul>
 </nav>
+
 
 <!-- ========================= -->
 <!-- BEGIN LICENSE PAGE BODY   -->
