--- a/project/part5/pricing/pricing.html
+++ b/project/part5/pricing/pricing.html
@@ -69,40 +69,12 @@
 <!-- INTERIOR NAV              -->
 <!-- ========================= -->
 <nav>
-    <ul class="menu">
-        <li><a href="licenses6.html">Products</a></li>
-
-        <li class="dropdown">
-            <a href="./deployments/deployments.html">Deployment ▾</a>
-            <ul class="dropdown-content">
-                <li><a href="#onprem">On‑Premise</a></li>
-                <li><a href="#cloud">Cloud</a></li>
-                <li><a href="#hybrid">Hybrid</a></li>
-            </ul>
-        </li>
-
-        <li class="dropdown">
-            <a href="licenses.html">Licensing ▾</a>
-            <ul class="dropdown-content">
-                <li><a href="licenses.html#utility">Utility Hours</a></li>
-                <li><a href="licenses.html#namedusers">Named Users</a></li>
-                <li><a href="licenses.html#buel">Business Unit Enterprise</a></li>
-                <li><a href="licenses.html#enterprise">Enterprise License Types</a></li>
-            </ul>
-        </li>
-
-        <li class="dropdown">
-            <a href="./pricing/pricing.html">Pricing ▾</a>
-            <ul class="dropdown-content">
-                <li><a href="./pricing/pricing.html-enterprise">Enterprise</a></li>
-                <li><a href="./pricing/pricing.html-cloud">Cloud</a></li>
-                <li><a href="./pricing/pricing.html-onprem">On‑Premise</a></li>
-                <li><a href="./pricing/pricing.html-utility">Utility Model</a></li>
-            </ul>
-        </li>
-
-        <li><a href="contacts.html">Contact Sales</a></li>
-    </ul>
+        <ul class="menu">
+        <li><a href="../licenses/licensing.html.html">Licenses</a></li>
+        <li><a href="../deployments/deployments.html">Deployments</a></li>
+        <li><a href="#">Pricing</a></li>
+        <li><a href="../contacts.html">Contact Sales</a></li>
+        </ul>
 </nav>
 
 <!-- ========================= -->
