--- a/project/part5/pricing/pricing.html
+++ b/project/part5/pricing/pricing.html
@@ -70,7 +70,7 @@
 <!-- ========================= -->
 <nav>
         <ul class="menu">
-        <li><a href="../licenses/licensing.html.html">Licenses</a></li>
+        <li><a href="../licenses/licensing.html">Licenses</a></li>
         <li><a href="../deployments/deployments.html">Deployments</a></li>
         <li><a href="#">Pricing</a></li>
         <li><a href="../contacts.html">Contact Sales</a></li>
