--- a/project/part5/deployments/deployments.html
+++ b/project/part5/deployments/deployments.html
@@ -70,7 +70,7 @@
 <!-- ========================= -->
 <nav>
     <ul class="menu">
-        <li><a href="../licenses/licensing.html">Licenses</a></li>
+        <li><a href="../licensing/licensing.html">Licenses</a></li>
         <li><a href="deployments.html">Deployments</a></li>
         <li><a href="../pricing/pricing.html">Pricing</a></li>
         <li><a href="../contacts.html">Contact Sales</a></li>
