--- a/project/part5/fusioncommerce/paynow2.html
+++ b/project/part5/fusioncommerce/paynow2.html
@@ -51,12 +51,22 @@
       <div class="dropdown">
         <button class="jsmenu"><img src="./images/greenmenu5.png"></button> 
         <div class="dropdown-content">
-          <a href="index.html">Home</a>
-          <a href="purchase555.html">BuyNow</a>
-          <a href="cartreview.html">My Carts</a>
-          <a href="mypurchases5.html">My Purchases</a>
-          <a href="myinvoices.html">My Invoices</a>
-          <a href="myprofile.html">MyProfile</a>
+          <a href="../index.html">Home</a>
+            <a href="../login.html">Login</a>
+            <a href="../logout.html">Logout</a>
+            <a href="../welcome.html">Welcome</a>
+            <a href="../licenses.html">Licenses</a>
+            <a href="../deployments.html">Deployments</a>
+            <a href="../reviews.html">AllReviews</a>
+            <a href="../mylicenselogs.html">MyLicenseLogs</a>
+            <a href="../mylicenses.html">MyLicenses</a>
+            <a href="../pricing/wizard.html">PricingWizard</a>
+            <a href="../mycart.html?uid=1">MyCart</a>
+            <a href="../myprofile.html">MyProfile</a>
+            <a href="../testimonials.html">AdminTestimonials</a>
+            <a href="../products.html">AdminProducts</a>
+            <a href="../licensetypes.html">AdminLicenseTypes</a>
+            <a href="../template.html">AdminPageTemplate</a>
         </div>
       </div> 
       <div class="logo">&nbsp;&nbsp;<h5>FusionCommerce – Complete Payment</h5></div>
