--- a/project/part5/fusioncommerce/reviews5.html
+++ b/project/part5/fusioncommerce/reviews5.html
@@ -27,21 +27,22 @@
       <div class="dropdown">
         <button class="jsmenu"><img src="./images/greenmenu5.png" alt="Menu"></button>
         <div class="dropdown-content">
-                <a href="index.html">Home</a>
-                <a href="login.html">Login</a>
-                <a href="logout.html">Logout</a>
-                <a href="welcome.html">Welcome</a>
-                <a href="licenses6.html">BuyNow</a>
-                <a href="reviews.html">AllReviews</a>
-                <a href="mylicenselogs.html">MyLicenseLogs</a>
-                <a href="mylicenses.html">MyLicenses</a>
-                <a href="./pricing/wizard.html">PricingWizard</a>
-                <a href="mycart.html?uid=1">MyCart</a>
-                <a href="myprofile.html">MyProfile</a>
-                <a href="testimonials.html">AdminTestimonials</a>
-                <a href="products.html">AdminProducts</a>
-                <a href="licensetypes.html">AdminLicenseTypes</a>
-                <a href="template.html">AdminPageTemplate</a>
+               <a href="../index.html">Home</a>
+            <a href="../login.html">Login</a>
+            <a href="../logout.html">Logout</a>
+            <a href="../welcome.html">Welcome</a>
+            <a href="../licenses.html">Licenses</a>
+            <a href="../deployments.html">Deployments</a>
+            <a href="../reviews.html">AllReviews</a>
+            <a href="../mylicenselogs.html">MyLicenseLogs</a>
+            <a href="../mylicenses.html">MyLicenses</a>
+            <a href="../pricing/wizard.html">PricingWizard</a>
+            <a href="../mycart.html?uid=1">MyCart</a>
+            <a href="../myprofile.html">MyProfile</a>
+            <a href="../testimonials.html">AdminTestimonials</a>
+            <a href="../products.html">AdminProducts</a>
+            <a href="../licensetypes.html">AdminLicenseTypes</a>
+            <a href="../template.html">AdminPageTemplate</a>
         </div>
       </div>
       <div class="logo">&nbsp;&nbsp;&nbsp;<h5 class="mb-0">GEM.LM - ParkReviews</h5></div>
