--- a/project/part5/productdetails.html
+++ b/project/part5/productdetails.html
@@ -1,15 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Product Details</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">    
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<script type="module" src="https://esm.run/@material/web/button/text-button.js"></script>
+<link rel="stylesheet" href="./css/site.css"> 
+<link rel="stylesheet" href="./css/layout.css"> 
+<link rel="stylesheet" href="./css/greenvillemiddle.css">  
+<link rel="stylesheet" href="./css/greenville.css"> 
+<link rel="stylesheet" href="../css/fusioncart.css">
+<title>Greenville Associates Enterprise Software | Enterprise Licensing</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+   .right-links { padding: var(--space-1); /* becomes 4px */ 
+				 margin-bottom: var(--space-2); /* becomes 16px */ 
+				gap: 4px;
+				}
+  /* Thumbnail slider */
+  .sales-slider {
+    position: relative;
+    width: 999px;
+    height: 133px;
+    margin: 10px auto;
+    overflow: hidden;
+  }
 
-  <!-- Greenville / Fusioncart Theme -->
-  <link rel="stylesheet" href="../css/fusioncart.css">
+  .slider-window {
+    width: 999px;
+    height: 133px;
+    overflow: hidden;
+  }
 
-  <style>
-    /* Optional: Page-specific tweaks */
+  .slides {
+    display: flex;
+    transition: transform 0.4s ease;
+  }
+
+
+.slide {
+  min-width: 200px;      /* smaller, cleaner */
+  height: 120px;
+  cursor: pointer;
+  padding: 2px;
+  border-radius: 4px;
+  overflow: hidden;
+  opacity: 0.7;
+  transition: opacity 0.2s ease, transform 0.2s ease;
+}
+
+.slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;     /* keeps aspect ratio while filling */
+  border-radius: 4px;
+}
+
+.slide.active {
+  opacity: 1;
+  transform: scale(1.05);
+  outline: 2px solid #00e676;
+}
+
+H4{ color: darkgreen;}
+	
+  .prev, .next {
+    position: absolute;
+    top: 40%;
+    background: rgba(0,0,0,0.4);
+    color: white;
+    border: none;
+    padding: 6px 10px;
+    cursor: pointer;
+    font-size: 18px;
+  }
+
+  .prev { left: 0; }
+  .next { right: 0; }
+
+.product-card {
+    width: 300px;
+    min-height: 200px;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    background: #fff;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+}
+.products { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; }
+.product-features { columns: 2; column-gap: 20px; padding-left: 20px; }
+button { vertical-align: middle; text-align: center; color: white; background-color: black; width: 150px; margin: 0 auto; }
+	.emphasis {
+  margin-top: 40px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.emphasis-inner {
+  background: #000;              /* black background */
+  color: #b8ff4f;                /* kelly‑green text */
+  padding: 40px 50px;
+  border-radius: 12px;
+  max-width: 600px;
+  width: 100%;
+  box-shadow: 0 0 20px rgba(0,0,0,0.4);
+}
+
+.emphasis-inner h3 {
+  margin-bottom: 8px;
+  font-size: 1.4rem;
+  color: #7CFC00;                /* brighter kelly green for headers */
+}
+
+.emphasis-inner p {
+  margin-bottom: 24px;
+  font-size: 1rem;
+  color: #d9ffd9;                /* softer green for readability */
+}
+
+.emphasis-inner p:last-child {
+  margin-bottom: 0;
+}
+
+#centercourt {
+  width: 1000px;
+  height: 300px;
+  display: block;
+  margin: 0 auto;        /* centers it */
+  border: 0;
+  background: #000;      /* optional: prevents white flash */
+}
+
+a
+{
+font-size: 10pt;
+}
+/* Optional: Page-specific tweaks */
     #loading {
       text-align: center;
       padding: 20px;
@@ -22,23 +149,110 @@
       font-size: 1.2rem;
       color: red;
       display: none;
-    }
-  </style>
+    }	
+</style>
+
 </head>
-
 <body>
-
-  <!-- NAVBAR (Optional) -->
-  <div class="navbar">
-    <div class="nav-left">
-      <span class="logo">Product Details</span>
+<div class="container2" style="border: solid 2px darkgreen;">
+<div class="topnav">
+    <div class="dropdown">
+        <button class="dropbtn">Menu ▼</button>
+        <div class="dropdown-content">
+			      <a href="index.html">Home</a>
+			      <a href="login.html">Login</a>
+            <a href="logout.html">Logout</a>
+            <a href="welcome.html">Welcome</a>
+            <a href="licenses6.html">BuyNow</a>
+            <a href="reviews.html">AllReviews</a>
+            <a href="mylicenselogs.html">MyLicenseLogs</a>
+            <a href="mylicenses.html">MyLicenses</a>
+            <a href="./pricing/wizard.html">PricingWizard</a>
+            <a href="mycart.html?uid=1">MyCart</a>
+            <a href="myprofile.html">MyProfile</a>
+            <a href="testimonials.html">AdminTestimonials</a>
+            <a href="products.html">AdminProducts</a>
+            <a href="licensetypes.html">AdminLicenseTypes</a>
+	          <a href="template.html">AdminPageTemplate</a>
+        </div>
     </div>
-    <div class="nav-right">
-      <a href="../index.html">Home</a>
-      <a href="../products.html">Products</a>
-    </div>
-  </div>
+<div class="right-links" style="display:flex; gap:6px; align-items:center; color: white;">
 
+  <md-text-button class="icon-only" href="index.html" aria-label="Home" title="Home">
+    <span class="material-icons" style="color:white;">home</span>
+  </md-text-button>
+
+  <md-text-button class="icon-only" href="userhelp.html" aria-label="Help" title="Help">
+    <span class="material-icons" style="color:white;">help_outline</span>
+  </md-text-button>
+
+  <md-text-button class="icon-only" href="usernotices.html" aria-label="Notifications" title="Notifications">
+    <span class="material-icons" style="color:white;">notifications</span>
+  </md-text-button>
+
+  <md-text-button class="icon-only" href="login.html" aria-label="Login" title="Login">
+    <span class="material-icons" style="color:white;">login</span>
+  </md-text-button>
+
+  <md-text-button class="icon-only" href="logout.html" aria-label="Logout" title="Logout">
+    <span class="material-icons" style="color:white;">logout</span>
+  </md-text-button>
+
+   <md-text-button class="icon-only" href="myprofile.html" aria-label="My Profile" title="My Profile">
+    <span class="material-icons" style="color:white;">person</span>
+  </md-text-button>
+
+   <md-text-button class="icon-only" href="mycart.html" aria-label="My Cart" title="My Cart">
+    <span class="material-icons" style="color:white;">shopping_cart</span>
+  </md-text-button>
+</div>
+    
+</div>
+<header>
+    <h1>Greenville Enterprise Software</h1>
+    <span>Enterprise‑grade software solutions with flexible deployment and licensing for global organizations.</span>
+</header>
+
+<nav>
+    <ul class="menu">
+        <li><a href="licenses6.html">Products</a></li>
+
+        <li class="dropdown">
+            <a href="./deployments/deployments.html">Deployment ▾</a>
+            <ul class="dropdown-content">
+                <li><a href="#onprem">On‑Premise</a></li>
+                <li><a href="#cloud">Cloud</a></li>
+                <li><a href="#hybrid">Hybrid</a></li>
+            </ul>
+        </li>
+
+        <li class="dropdown">
+            <a href="./licensing/licensing.html">Licensing ▾</a>
+            <ul class="dropdown-content">
+                <li><a href="#utility">Utility Hours</a></li>
+                <li><a href="#namedusers">Named Users</a></li>
+                <li><a href="#buel">Business Unit Enterprise</a></li>
+                <li><a href="#enterprise">Enterprise License Types</a></li>
+            </ul>
+        </li>
+
+        <!-- ⭐ NEW PRICING MENU -->
+        <li class="dropdown">
+            <a href="./pricing/pricing.html">Pricing ▾</a>
+            <ul class="dropdown-content">
+                <li><a href="./pricing/pricing.html">All Licenses</a></li>
+                <li><a href="./pricing/wizard.html">Wizard</a></li>
+                <li><a href="./pricing/pricing.html-enterprise">Enterprise</a></li>
+                <li><a href="./pricing/pricing.html-cloud">Cloud</a></li>
+                <li><a href="./pricing/pricing.html-onprem">On‑Premise</a></li>
+                <li><a href="./pricing/pricing.html-utility">Utility Model</a></li>
+            </ul>
+        </li>
+
+        <li><a href="contacts.html">Contact Sales</a></li>
+    </ul>
+</nav>
+  
   <main class="main-content">
 
     <div id="loading">Loading product…</div>
