--- a/project/part5/productdetails.html
+++ b/project/part5/productdetails.html
@@ -285,9 +285,9 @@ font-size: 10pt;
 
   </main>
 
-  <footer class="footer">
-    © 2026 Greenville Retail System
-  </footer>
+<footer>
+    © 2026 Greenville Associates Enterprise Software. All rights reserved.
+</footer>
 
   <!-- PRODUCT DETAILS SCRIPT -->
   <script>
