--- a/project/part5/productdetails.html
+++ b/project/part5/productdetails.html
@@ -252,7 +252,12 @@ font-size: 10pt;
         <li><a href="contacts.html">Contact Sales</a></li>
     </ul>
 </nav>
-  
+  <div class="pageheader">
+    <hr>
+    <h4 align="center">Product SKU Information</h4>
+    <hr>
+</div>
+	
   <main class="main-content">
 
     <div id="loading">Loading product…</div>
