--- a/project/part5/productdetails.html
+++ b/project/part5/productdetails.html
@@ -258,41 +258,68 @@ font-size: 10pt;
     <hr>
 </div>
 	
-  <main class="main-content">
+ <main class="main-content">
 
     <div id="loading">Loading product…</div>
     <div id="error">Product not found.</div>
 
     <!-- PRODUCT DETAILS PANEL -->
     <div id="interiorpanel" style="display:none;">
-      <h2 id="product-title"></h2>
 
-      <div class="master-row">
+      <h2 id="product-title" class="mb-4"></h2>
 
-        <div class="left-column">
-          <p><strong>SKU:</strong> <span id="product-sku"></span></p>
-          <p><strong>Price:</strong> <span id="product-price"></span></p>
-          <p><strong>Qty On Hand:</strong> <span id="product-qty"></span></p>
-        </div>
+      <!-- Bootstrap Table -->
+      <table class="table table-bordered table-striped">
+        <tbody>
+          <tr>
+            <th scope="row">SKU</th>
+            <td id="product-sku"></td>
+          </tr>
+          <tr>
+            <th scope="row">Price</th>
+            <td id="product-price"></td>
+          </tr>
+          <tr>
+            <th scope="row">Quantity On Hand</th>
+            <td id="product-qty"></td>
+          </tr>
+          <tr>
+            <th scope="row">Vendor</th>
+            <td id="product-vendor"></td>
+          </tr>
+          <tr>
+            <th scope="row">Warehouse</th>
+            <td id="product-warehouse"></td>
+          </tr>
+        </tbody>
+      </table>
 
-        <div class="right-column">
-          <p><strong>Vendor:</strong> <span id="product-vendor"></span></p>
-          <p><strong>Warehouse:</strong> <span id="product-warehouse"></span></p>
+      <h3 class="mt-4">Discounts</h3>
 
-          <h3>Discounts</h3>
-          <p>VP Discount: <span id="discount-vp"></span></p>
-          <p>Direct Discount: <span id="discount-dir"></span></p>
-          <p>Manager Discount: <span id="discount-mgr"></span></p>
-        </div>
+      <table class="table table-bordered table-hover">
+        <thead class="table-success">
+          <tr>
+            <th>VP Discount</th>
+            <th>Direct Discount</th>
+            <th>Manager Discount</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td id="discount-vp"></td>
+            <td id="discount-dir"></td>
+            <td id="discount-mgr"></td>
+          </tr>
+        </tbody>
+      </table>
 
-      </div>
     </div>
 
   </main>
 
-<footer>
-    © 2026 Greenville Associates Enterprise Software. All rights reserved.
-</footer>
+  <footer class="footer">
+    © 2026 Greenville Associates Consulting
+  </footer>
 
   <!-- PRODUCT DETAILS SCRIPT -->
   <script>
