--- a/project/part5/productdetails.html
+++ b/project/part5/productdetails.html
@@ -356,6 +356,7 @@ font-size: 10pt;
       document.getElementById("loading").style.display = "none";
       document.getElementById("interiorpanel").style.display = "block";
 
+	  document.getElementById("product-title").style.fontSize = "11pt";
       document.getElementById("product-title").textContent = p.description;
       document.getElementById("product-sku").textContent = p.SKEWID;
 	  document.getElementById("product-sku").style.fontSize = "12pt";
