--- a/project/part5/fusioncommerce/paynow2.html
+++ b/project/part5/fusioncommerce/paynow2.html
@@ -10,6 +10,7 @@
   <script type="module" src="https://esm.run/@material/web/all.js"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
+  <link rel="stylesheet" href="./css/licenses.css" />
   <link rel="stylesheet" href="./css/fusioncart.css" />
   <script src="./js/products.js"></script>
   <script src="./js/cart.js"></script>
