--- a/project/part5/fusioncommerce/purchase555.html
+++ b/project/part5/fusioncommerce/purchase555.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script type="module" src="https://esm.run/@material/web/all.js"></script>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <link rel="stylesheet" href="./css/licenses.css" />
   <link rel="stylesheet" href="./css/fusioncart.css" />
   <!-- Your new JS files -->
   <script src="./js/products.js"></script>
