--- a/project/part5/fusioncommerce/reviews5.html
+++ b/project/part5/fusioncommerce/reviews5.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./css/site.css">
   <link rel="stylesheet" href="./css/layout.css">
   <link rel="stylesheet" href="./css/greenville.css">
+  <link rel="stylesheet" href="./js/licenses.js" />
   <script src="./js/bikes.js"></script>
 
   <!-- Bootstrap CSS -->
