--- a/project/part5/index.html
+++ b/project/part5/index.html
@@ -135,12 +135,23 @@ a
 {
 font-size: 10pt;
 }
-	
+
+.topsection
+{
+	max-width: 1580px;
+	width: 1580px;
+}
+bottom-sections
+{
+	max-width: 1580px;
+	width: 1580px;
+}
 </style>
 
 </head>
 <body>
-<div class="topnav">
+<section class="topsection">
+	<div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
         <div class="dropdown-content">
@@ -237,6 +248,7 @@ font-size: 10pt;
         <li><a href="contacts.html">Contact Sales</a></li>
     </ul>
 </nav>
+</section>
 <div class="container2" style="border: solid 2px darkgreen;">
 <!-- ========================= -->
 <!--     MIDDLE CONTENT        -->
