--- a/project/part5/index.html
+++ b/project/part5/index.html
@@ -140,11 +140,15 @@ font-size: 10pt;
 {
 	max-width: 1580px;
 	width: 1580px;
+	margin: 0 auto;
+	position: relative;
 }
-bottom-sections
+.bottom-sections
 {
 	max-width: 1580px;
 	width: 1580px;
+	margin: 0 auto;
+	position: relative;
 }
 </style>
 
