--- a/project/part5/index.html
+++ b/project/part5/index.html
@@ -142,6 +142,7 @@ font-size: 10pt;
 	width: 1580px;
 	margin: 0 auto;
 	position: relative;
+	text-align: center;
 }
 .bottom-sections
 {
@@ -150,6 +151,8 @@ font-size: 10pt;
 	margin: 0 auto;
 	position: relative;
 	margin-top: 20px;
+	text-align: center;
+	vertical-align: middle;
 }
 </style>
 
