--- a/project/part5/index.html
+++ b/project/part5/index.html
@@ -164,6 +164,16 @@ font-size: 10pt;
 	text-align: center;
 	vertical-align: middle;
 }
+	.container2
+{
+	max-width: 1580px;
+	margin: 0 auto;
+	margin: 0 auto;
+	position: relative;
+	margin-top: 20px;
+	text-align: center;
+	vertical-align: middle;
+}
 </style>
 
 </head>
