--- a/project/part5/pricing/wizard.html
+++ b/project/part5/pricing/wizard.html
@@ -32,6 +32,73 @@
     cursor: pointer;
     margin-top: 10px;
   }
+.result-card {
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  padding: 20px;
+  margin: 20px 0;
+  background: #fff;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+  transition: transform .2s ease, box-shadow .2s ease;
+}
+
+.result-card:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 4px 12px rgba(0,0,0,0.12);
+}
+
+.pricing-card-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.pricing-card-header h3 {
+  margin: 0;
+  font-size: 1.25rem;
+}
+
+.price {
+  font-size: 1.4rem;
+  font-weight: bold;
+  color: #0078ff;
+}
+
+.feature-list {
+  list-style: none;
+  padding: 0;
+  margin: 0 0 15px 0;
+}
+
+.feature-list li {
+  display: flex;
+  align-items: center;
+  margin: 6px 0;
+  font-size: 0.95rem;
+}
+
+.feature-list .check {
+  font-size: 18px;
+  color: #28a745;
+  margin-right: 8px;
+}
+
+.buy-btn {
+  width: 100%;
+  padding: 10px;
+  background: #0078ff;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.buy-btn:hover {
+  background: #005fcc;
+}
+       
     </style>
 </head>
 <body>
@@ -355,16 +422,25 @@ function updateResults() {
     card.className = "result-card";
 
     card.innerHTML = `
-      <h3>${item.name}</h3>
-      <strong>${item.price}</strong>
-      <ul>${item.features.map(f => `<li>${f}</li>`).join("")}</ul>
-      <button class="buy-btn">Buy</button>
+      <div class="pricing-card-header">
+        <h3>${item.name}</h3>
+        <div class="price">${item.price}</div>
+      </div>
+
+      <ul class="feature-list">
+        ${item.features
+          .map(f => `<li><span class="material-icons check">check_circle</span>${f}</li>`)
+          .join("")}
+      </ul>
+
+      <button class="buy-btn">Add to Cart</button>
     `;
 
     resultsDiv.appendChild(card);
   });
 }
 </script>
+
 
 </body>
 </html>
