--- a/project/part5/pricing/wizard.html
+++ b/project/part5/pricing/wizard.html
@@ -96,6 +96,11 @@
   background: #005fcc;
 }
 
+.selectors
+ {
+ text-align: center;
+ max-width: 1600px;
+ }
        
     </style>
 </head>
@@ -198,7 +203,7 @@
         <span align="center"><h4> Pricing Wizard</h4></span>
         <hr>
     </div>
-
+<section class="selectors">
 <div style="margin-left: 30px;">
 <label>Product Type</label>
 <select id="productType">
@@ -226,7 +231,7 @@
   <option value="utility">Utility Model</option>
 </select>
 </div>
-
+</section>
 <div id="results"></div>
 </div>
 <script>
