--- a/project/part5/pricing/wizard.html
+++ b/project/part5/pricing/wizard.html
@@ -19,6 +19,7 @@
   flex-wrap: wrap;
   gap: 20px;
   margin-top: 20px;
+  text-align: center;
 }
 
 /* Individual pricing card */
@@ -100,6 +101,7 @@
  {
  text-align: center;
  max-width: 1600px;
+ gap: 50px;
  }
        
     </style>
