--- a/project/part5/pricing/wizard.html
+++ b/project/part5/pricing/wizard.html
@@ -112,16 +112,17 @@
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
         <div class="dropdown-content">
-            <a href="login.html">Login</a>
-            <a href="logout.html">Logout</a>
-            <a href="welcome.html">Welcome</a>
-            <a href="products.html">All Products</a>
-            <a href="licensetypes.html">LicenseTypes</a>
-            <a href="mylicenselogs.html">LicenseLogs</a>
-            <a href="mylicenses.html">MyLicenses</a>
-            <a href="mycart.html?uid=1">MyCart</a>
-            <a href="reviews.html">AllReviews</a>
-            <a href="help.html">Help</a>
+            <a href="../index.html">Login</a>
+            <a href="../login.html">Login</a>
+            <a href="../logout.html">Logout</a>
+            <a href="../welcome.html">Welcome</a>
+            <a href="../products.html">All Products</a>
+            <a href="../licensetypes.html">LicenseTypes</a>
+            <a href="../mylicenselogs.html">LicenseLogs</a>
+            <a href="../mylicenses.html">MyLicenses</a>
+            <a href="../mycart.html?uid=1">MyCart</a>
+            <a href="../reviews.html">AllReviews</a>
+            <a href="../help.html">Help</a>
         </div>
     </div>
 
