--- a/project/part5/pricing/wizard.html
+++ b/project/part5/pricing/wizard.html
@@ -20,6 +20,9 @@
   gap: 20px;
   margin-top: 20px;
   text-align: center;
+  margin: 0 auto;
+  position: relative;
+  max-width: 1400px;
 }
 
 /* Individual pricing card */
