--- a/project/part5/userhelp.html
+++ b/project/part5/userhelp.html
@@ -3,10 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <title>User Help | Greenville Enterprise Software</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="../css/site.css">
-<link rel="stylesheet" href="../css/layout.css">
-<link rel="stylesheet" href="../css/greenville.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<script type="module" src="https://esm.run/@material/web/all.js"></script>
+<link rel="stylesheet" href="./css/site.css">
+<link rel="stylesheet" href="./css/layout.css">
+<link rel="stylesheet" href="./css/greenville.css">  
+<title>Greenville Associates Enterprise Software | Enterprise Licensing</title>
 <style>
     .help-container {
         max-width: 900px;
