--- a/project/part5/pricing/wizard.html
+++ b/project/part5/pricing/wizard.html
@@ -194,11 +194,8 @@
         <li class="dropdown">
             <a href="./pricing/pricing.html">Pricing ▾</a>
             <ul class="dropdown-content">
-                <li><a href="./pricing/pricing.html">All Licenses</a></li>
-                <li><a href="./pricing/pricing.html-enterprise">Enterprise</a></li>
-                <li><a href="./pricing/pricing.html-cloud">Cloud</a></li>
-                <li><a href="./pricing/pricing.html-onprem">On‑Premise</a></li>
-                <li><a href="./pricing/pricing.html-utility">Utility Model</a></li>
+                <li><a href="wizard.html">All Licenses</a></li>
+				<li><a href="wizard.html">All Licenses</a></li>
             </ul>
         </li>
 
