--- a/project/part5/pricing/wizard.html
+++ b/project/part5/pricing/wizard.html
@@ -195,7 +195,7 @@
             <a href="./pricing/pricing.html">Pricing ▾</a>
             <ul class="dropdown-content">
                 <li><a href="wizard.html">All Licenses</a></li>
-				<li><a href="wizard.html">All Licenses</a></li>
+				<li><a href="wizard.html">Pricing Wizard</a></li>
             </ul>
         </li>
 
