--- a/project/part5/pricing/wizard.html
+++ b/project/part5/pricing/wizard.html
@@ -9,6 +9,7 @@
 <script type="module" src="https://esm.run/@material/web/all.js"></script>
 <link rel="stylesheet" href="../css/site.css">
 <link rel="stylesheet" href="../css/layout.css">
+<link rel="stylesheet" href="../css/greenvillemiddle.css">
 <link rel="stylesheet" href="../css/greenville.css">   
 <title>Greenville Associates Enterprise Software | Enterprise Licensing</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
