--- a/project/part5/index.html
+++ b/project/part5/index.html
@@ -10,7 +10,9 @@
 <link rel="stylesheet" href="./css/greenville.css">  
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-   
+   container2{width: 1580px;
+			  max-width: 1580px;
+			 }
 </style>
 
 </head>
