--- a/project/part5/index.html
+++ b/project/part5/index.html
@@ -2,23 +2,17 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">    
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<script type="module" src="https://esm.run/@material/web/all.js"></script>
-<link rel="stylesheet" href="./css/site.css">
-<link rel="stylesheet" href="./css/layout.css">
+<script type="module" src="https://esm.run/@material/web/button/text-button.js"></script>
+<link rel="stylesheet" href="./css/site.css"> 
+<link rel="stylesheet" href="./css/layout.css"> 
+<link rel="stylesheet" href="./css/greenvillemiddle.css">  
 <link rel="stylesheet" href="./css/greenville.css">  
+<title>Greenville Associates Enterprise Software | Enterprise Licensing</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-<<<<<<< Updated upstream
-   container2{
-	   		  width: 1580px;
-			  max-width: 1580px;
-	   		  margin: 0 auto;
-	          border: darkgreen 2px solid;
-			 }
-=======
-  .right-links { padding: var(--space-1); /* becomes 4px */ 
+   .right-links { padding: var(--space-1); /* becomes 4px */ 
 				 margin-bottom: var(--space-2); /* becomes 16px */ 
 				gap: 4px;
 				}
@@ -141,14 +135,13 @@ a
 {
 font-size: 10pt;
 }
-
->>>>>>> Stashed changes
+	
 </style>
 
 </head>
 <body>
-<section class="topsection">
-	<div class="topnav">
+<div class="container2" style="border: solid 2px darkgreen;">
+<div class="topnav">
     <div class="dropdown">
         <button class="dropbtn">Menu ▼</button>
         <div class="dropdown-content">
@@ -233,16 +226,19 @@ font-size: 10pt;
         <li class="dropdown">
             <a href="./pricing/pricing.html">Pricing ▾</a>
             <ul class="dropdown-content">
-                <li><a href="./pricing/wizard.html">All Licenses</a></li>
+                <li><a href="./pricing/pricing.html">All Licenses</a></li>
                 <li><a href="./pricing/wizard.html">Wizard</a></li>
+                <li><a href="./pricing/pricing.html-enterprise">Enterprise</a></li>
+                <li><a href="./pricing/pricing.html-cloud">Cloud</a></li>
+                <li><a href="./pricing/pricing.html-onprem">On‑Premise</a></li>
+                <li><a href="./pricing/pricing.html-utility">Utility Model</a></li>
             </ul>
         </li>
 
         <li><a href="contacts.html">Contact Sales</a></li>
     </ul>
 </nav>
-</section>
-<div class="container2" style="border: solid 2px darkgreen;">
+
 <!-- ========================= -->
 <!--     MIDDLE CONTENT        -->
 <!-- ========================= -->
@@ -587,7 +583,6 @@ font-size: 10pt;
 </div>
 
 </section>
-</div>
 <div class="bottom-sections">
 	
 <section class="middle-columns" style="background-color: lightgrey;">
@@ -636,7 +631,7 @@ font-size: 10pt;
     © 2026 Greenville Associates Enterprise Software. All rights reserved.
 </footer>
 </div>
-
+</div>
 <script type="module">
   import { createTheme } from "https://cdn.jsdelivr.net/npm/@mui/material@latest/+esm";
 
