--- a/project/part5/help.html
+++ b/project/part5/help.html
@@ -120,102 +120,103 @@
         <hr>
     </div>
     
-<section class="top-section">
-       <form id="ticketForm">
+<section class="top-section py-4">
+    <div class="container form-wrapper">
 
-        <div class="row">
-            <div class="col-md-6 mb-3">
-                <label>Ticket ID</label>
-                <input type="text" class="form-control" name="ticketid" required>
+        <form id="ticketForm" class="p-4 rounded shadow">
+
+            <div class="row g-3">
+                <div class="col-lg-4 col-md-6">
+                    <label>Ticket ID</label>
+                    <input type="text" class="form-control" name="ticketid" required>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <label>Employee ID</label>
+                    <input type="number" class="form-control" name="emplid" required>
+                </div>
+
+                <div class="col-lg-4 col-md-12">
+                    <label>Severity (1–5)</label>
+                    <input type="number" class="form-control" name="severity" min="1" max="5" required>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <label>User ID</label>
+                    <input type="number" class="form-control" name="userid" required>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <label>Email</label>
+                    <input type="email" class="form-control" name="email" required>
+                </div>
+
+                <div class="col-lg-4 col-md-12">
+                    <label>Full Name</label>
+                    <input type="text" class="form-control" name="fullname" required>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <label>Best Contact Number</label>
+                    <input type="text" class="form-control" name="bestcontactnumber" required>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <label>Replied?</label>
+                    <select class="form-control" name="replied">
+                        <option value="Yes">Yes</option>
+                        <option value="No">No</option>
+                    </select>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <label>Manager ID</label>
+                    <input type="text" class="form-control" name="repliedmanagerid">
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <label>Manager Phone</label>
+                    <input type="text" class="form-control" name="repliedmanagerphone">
+                </div>
+
+                <div class="col-lg-4 col-md-12">
+                    <label>Manager Email</label>
+                    <input type="email" class="form-control" name="repliedmanageremail">
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <label>Ticket Date</label>
+                    <input type="datetime-local" class="form-control" name="ticketdate" required>
+                </div>
+
+                <div class="col-lg-4 col-md-6">
+                    <label>Response Date</label>
+                    <input type="datetime-local" class="form-control" name="responsedate">
+                </div>
+
+                <div class="col-lg-4 col-md-12">
+                    <label>Ticket Status</label>
+                    <select class="form-control" name="ticketstatus">
+                        <option value="Open">Open</option>
+                        <option value="In Progress">In Progress</option>
+                        <option value="Closed">Closed</option>
+                    </select>
+                </div>
+
+                <div class="col-12">
+                    <label>Description</label>
+                    <textarea class="form-control" name="descr" rows="3" required></textarea>
+                </div>
+
+                <div class="col-12">
+                    <button type="submit" class="btn btn-custom w-100">Submit Ticket</button>
+                </div>
             </div>
 
-            <div class="col-md-6 mb-3">
-                <label>Employee ID</label>
-                <input type="number" class="form-control" name="emplid" required>
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label>Description</label>
-            <textarea class="form-control" name="descr" rows="3" required></textarea>
-        </div>
-
-        <div class="mb-3">
-            <label>Severity (1–5)</label>
-            <input type="number" class="form-control" name="severity" min="1" max="5" required>
-        </div>
-
-        <div class="row">
-            <div class="col-md-6 mb-3">
-                <label>User ID</label>
-                <input type="number" class="form-control" name="userid" required>
-            </div>
-
-            <div class="col-md-6 mb-3">
-                <label>Email</label>
-                <input type="email" class="form-control" name="email" required>
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label>Full Name</label>
-            <input type="text" class="form-control" name="fullname" required>
-        </div>
-
-        <div class="mb-3">
-            <label>Best Contact Number</label>
-            <input type="text" class="form-control" name="bestcontactnumber" required>
-        </div>
-
-        <div class="row">
-            <div class="col-md-4 mb-3">
-                <label>Replied?</label>
-                <select class="form-control" name="replied">
-                    <option value="Yes">Yes</option>
-                    <option value="No">No</option>
-                </select>
-            </div>
-
-            <div class="col-md-4 mb-3">
-                <label>Manager ID</label>
-                <input type="text" class="form-control" name="repliedmanagerid">
-            </div>
-
-            <div class="col-md-4 mb-3">
-                <label>Manager Phone</label>
-                <input type="text" class="form-control" name="repliedmanagerphone">
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label>Manager Email</label>
-            <input type="email" class="form-control" name="repliedmanageremail">
-        </div>
-
-        <div class="row">
-            <div class="col-md-6 mb-3">
-                <label>Ticket Date</label>
-                <input type="datetime-local" class="form-control" name="ticketdate" required>
-            </div>
-
-            <div class="col-md-6 mb-3">
-                <label>Response Date</label>
-                <input type="datetime-local" class="form-control" name="responsedate">
-            </div>
-        </div>
-
-        <div class="mb-3">
-            <label>Ticket Status</label>
-            <select class="form-control" name="ticketstatus">
-                <option value="Open">Open</option>
-                <option value="In Progress">In Progress</option>
-                <option value="Closed">Closed</option>
-            </select>
-        </div>
-
-        <button type="submit" class="btn btn-custom w-100">Submit Ticket</button>
-    </form>
+        </form>
+    </div>
 </section>
+
 
 
 <section class="middle-columns">
