--- a/project/part5/help.html
+++ b/project/part5/help.html
@@ -11,7 +11,7 @@
 <title>Greenville Associates Enterprise Software | Enterprise Licensing</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-      
+      ticketForm { height: 400px; max-height: 600px; }
     </style>
 </head>
 <body>
