--- a/project/part5/index.html
+++ b/project/part5/index.html
@@ -258,7 +258,7 @@ font-size: 10pt;
 
         <div class="slide"
              data-url="./images/slide1.png"
-             data-link="https://example.com/page1">
+             data-link="https://youtu.be/dX3KU2eaixY">
           <img src="./images/slide1.png" alt="Slide 1">
         </div>
 
