--- a/project/part5/index.html
+++ b/project/part5/index.html
@@ -257,14 +257,14 @@ font-size: 10pt;
       <div class="slides">
 
         <div class="slide"
-             data-url="https://youtu.be/dX3KU2eaixY"
-             data-link="https://youtu.be/dX3KU2eaixY">
-          <img src="https://youtu.be/dX3KU2eaixY" alt="Slide 1">
+             data-url="https://www.youtube.com/embed/dX3KU2eaixY?si=siIhuALGldG9Z0n9"
+             data-link="https://www.youtube.com/embed/dX3KU2eaixY?si=siIhuALGldG9Z0n9">
+          <img src="https://www.youtube.com/embed/dX3KU2eaixY?si=siIhuALGldG9Z0n9" alt="Slide 1">
         </div>
 
 		<div class="slide"
              data-url="./images/slide1.png"
-             data-link="https://youtu.be/dX3KU2eaixY">
+             data-link="https://www.greenvilleassociates.com">
           <img src="./images/slide1.png" alt="Slide 1">
         </div>
 		  
