--- a/project/part5/index.html
+++ b/project/part5/index.html
@@ -661,8 +661,9 @@ theme.spacing(2); // `${4 * 2}px` = '8px'
 
       // Load first image into iframe
       iframe.src = slideItems[0].dataset.url;
-	  iframe.src.width = 100%;
-	  iframe.src.height = 100%;
+	  iframe.setAttribute("width", "100%");
+	  iframe.setAttribute("height", "100%");
+
 
       // Clicking the iframe goes to the website for the current slide
       iframe.addEventListener('click', () => {
