--- a/project/part5/index.html
+++ b/project/part5/index.html
@@ -206,19 +206,14 @@ font-size: 10pt;
         <li class="dropdown">
             <a href="./deployments/deployments.html">Deployment ▾</a>
             <ul class="dropdown-content">
-                <li><a href="#onprem">On‑Premise</a></li>
-                <li><a href="#cloud">Cloud</a></li>
-                <li><a href="#hybrid">Hybrid</a></li>
+                <li><a href="./deployments/deployments.html">Deployment Options</a></li>
             </ul>
         </li>
 
         <li class="dropdown">
             <a href="./licensing/licensing.html">Licensing ▾</a>
             <ul class="dropdown-content">
-                <li><a href="#utility">Utility Hours</a></li>
-                <li><a href="#namedusers">Named Users</a></li>
-                <li><a href="#buel">Business Unit Enterprise</a></li>
-                <li><a href="#enterprise">Enterprise License Types</a></li>
+                <li><a href="./licensing/licensing.html">Licensing Portal Pages</a></li>
             </ul>
         </li>
 
@@ -226,12 +221,8 @@ font-size: 10pt;
         <li class="dropdown">
             <a href="./pricing/pricing.html">Pricing ▾</a>
             <ul class="dropdown-content">
-                <li><a href="./pricing/pricing.html">All Licenses</a></li>
+                <li><a href="./pricing/wizard.html">All Licenses</a></li>
                 <li><a href="./pricing/wizard.html">Wizard</a></li>
-                <li><a href="./pricing/pricing.html-enterprise">Enterprise</a></li>
-                <li><a href="./pricing/pricing.html-cloud">Cloud</a></li>
-                <li><a href="./pricing/pricing.html-onprem">On‑Premise</a></li>
-                <li><a href="./pricing/pricing.html-utility">Utility Model</a></li>
             </ul>
         </li>
 
@@ -258,8 +249,8 @@ font-size: 10pt;
 
         <div class="slide"
              data-url="https://www.youtube.com/embed/dX3KU2eaixY?si=siIhuALGldG9Z0n9"
-             data-link="https://www.youtube.com/embed/dX3KU2eaixY?si=siIhuALGldG9Z0n9">
-          <img src="https://www.youtube.com/embed/dX3KU2eaixY?si=siIhuALGldG9Z0n9" alt="Slide 1">
+             data-link="https://example.com/page1">
+          <img src="./images/slide1.png" alt="Slide 1">
         </div>
 
 		<div class="slide"
