--- a/project/part5/index.html
+++ b/project/part5/index.html
@@ -254,7 +254,7 @@ background-color: #00cc44;
         <div class="slide"
              data-url="https://www.youtube.com/embed/dX3KU2eaixY?si=siIhuALGldG9Z0n9"
              data-link="https://example.com/page1">
-          <img src="./images/slide1.png" alt="Slide 1">
+          <img src="./images/fusionoverview.png" alt="Slide 1">
         </div>
 
 		<div class="slide"
