--- a/project/part5/index.html
+++ b/project/part5/index.html
@@ -223,7 +223,7 @@ background-color: #00cc44;
 
         <!-- ⭐ NEW PRICING MENU -->
         <li class="dropdown">
-            <a href="./pricing/pricing.html">Pricing ▾</a>
+            <a href="./pricing/wizard.html">Pricing ▾</a>
             <ul class="dropdown-content">
                 <li><a href="./pricing/wizard.html">All Licenses</a></li>
                 <li><a href="./pricing/wizard.html">Wizard</a></li>
