--- a/project/part5/deployments/deployments.html
+++ b/project/part5/deployments/deployments.html
@@ -82,10 +82,14 @@
 <!-- ========================= -->
 <section class="main-content">
 
+    <div class="pageheader">
+        <hr>
+        <span align="center"><h4>Deployment Models</h4></span>
+        <hr>
+    </div>
+    
 <section id="deployment">
-    <h2>Deployment Models</h2>
-    <p>Choose the deployment strategy that best aligns with your infrastructure, security, and scalability needs.</p>
-
+    
     <div class="ideas">
 
         <!-- On-Premise -->
