--- a/project/part5/pricing/pricing.html
+++ b/project/part5/pricing/pricing.html
@@ -84,7 +84,12 @@
 
 <!-- ENTERPRISE PRICING -->
 <section id="pricing-enterprise">
-    <h2>Enterprise Licenses</h2>
+    
+    <div class="pageheader">
+        <hr>
+        <span align="center"><h4>Enterprise Licenses</h4></span>
+        <hr>
+    </div>
 
     <div class="products">
 
