--- a/project/part5/deployments/deployments.html
+++ b/project/part5/deployments/deployments.html
@@ -116,7 +116,7 @@
                 <h3>Hybrid Software</h3>
                 <p>Combine on‑premise infrastructure with cloud‑based services for a flexible, scalable hybrid environment.</p>
             </div>
-            <img src="./images/deploy-hybrid.jpg" height="200px" width="200px" alt="Hybrid Deployment">
+            <img src="./images/deploy-hybrid2.png" height="200px" width="200px" alt="Hybrid Deployment">
         </div>
 
     </div>
