--- a/project/part5/pricing/wizard.html
+++ b/project/part5/pricing/wizard.html
@@ -169,39 +169,12 @@
 </header>
 
 <nav>
-    <ul class="menu">
-        <li><a href="licenses6.html">Products</a></li>
-
-        <li class="dropdown">
-            <a href="./deployments/deployments.html">Deployment ▾</a>
-            <ul class="dropdown-content">
-                <li><a href="#onprem">On‑Premise</a></li>
-                <li><a href="#cloud">Cloud</a></li>
-                <li><a href="#hybrid">Hybrid</a></li>
-            </ul>
-        </li>
-
-        <li class="dropdown">
-            <a href="./licensing/licensing.html">Licensing ▾</a>
-            <ul class="dropdown-content">
-                <li><a href="#utility">Utility Hours</a></li>
-                <li><a href="#namedusers">Named Users</a></li>
-                <li><a href="#buel">Business Unit Enterprise</a></li>
-                <li><a href="#enterprise">Enterprise License Types</a></li>
-            </ul>
-        </li>
-
-        <!-- ⭐ NEW PRICING MENU -->
-        <li class="dropdown">
-            <a href="./pricing/pricing.html">Pricing ▾</a>
-            <ul class="dropdown-content">
-                <li><a href="wizard.html">All Licenses</a></li>
-				<li><a href="wizard.html">Pricing Wizard</a></li>
-            </ul>
-        </li>
-
-        <li><a href="contacts.html">Contact Sales</a></li>
-    </ul>
+        <ul class="menu">
+        <li><a href="../licensing/licensing.html">Licenses</a></li>
+        <li><a href="../deployments/deployments.html">Deployments</a></li>
+        <li><a href="#">Pricing</a></li>
+        <li><a href="../contacts.html">Contact Sales</a></li>
+    	</ul>
 </nav>
     <div class="pageheader">
         <hr>
