--- a/project/part5/licensing/licensing.html
+++ b/project/part5/licensing/licensing.html
@@ -82,12 +82,14 @@
 <!-- BEGIN LICENSE PAGE BODY   -->
 <!-- ========================= -->
 <section class="main-content">
-
+    <div class="pageheader">
+        <hr>
+        <span align="center"><h4>Enterprise Licensing Options</h4></span>
+        <hr>
+    </div>
 <!-- ENTERPRISE LICENSING OPTIONS -->
 <section id="licensing">
-    <h2>Enterprise Licensing Options</h2>
-    <p>Greenville Associates offers flexible enterprise licensing models designed to support organizations of all sizes and structures.</p>
-
+   
     <div class="ideas">
 
         <!-- Utility Hours -->
