--- a/project/part5/userhelp.html
+++ b/project/part5/userhelp.html
@@ -110,18 +110,27 @@
 </header>
 
 <div class="help-container">
-
+<div class="pageheader">
+        <hr>
+        <span align="center"><h4>Enterprise Help</h4></span>
+        <hr>
+    </div>
+        
     <div class="help-header">
         <h2>Help Overview</h2>
         <p>
-            Use this page to request assistance from the Greenville Enterprise Software support team.  
-            Describe your issue below, and choose whether you want to contact your account team or open a trouble ticket.
+            We have a number of support options for your products. Visit <a href="https://www.greenvilleassociates.com" target="_blank">GreenvilleAssociates.com</a> for more information
+            and our support sites which are listed below:
+            <ol>
+                <li>wiki.greenvilleassociates.com - Standard Top Questions & Answers</li>
+                <li>support.greenvilleassociates.com - Community Support Forums</li>
+                <li>suitecrm.greenvilleassociates.com - Open a Ticket For Your Maintenance Contract With Our Support Engineers for Premium Support</li>
+                <li>support@greenvilleassociates.com - Email Us For Best Effort Support within 72 Hours</li>
+                <li>momentum.greenvilleassociates.com - Search Our Momentum Magazine For More Installation and Maintenance WhitePapers and Publications</li>
+            </ol>
         </p>
     </div>
-
-    <label for="helpText"><strong>Describe Your Issue</strong></label>
-    <textarea id="helpText" placeholder="Provide details about your question, issue, or request..."></textarea>
-
+    
     <div class="help-actions">
         <a href="contacts.html" class="help-btn btn-account">Contact Account Team</a>
         <a href="help.html#ticket" class="help-btn btn-ticket">Open a Trouble Ticket</a>
