--- a/project/part5/licensing/licensing.html
+++ b/project/part5/licensing/licensing.html
@@ -14,6 +14,12 @@
 <link rel="stylesheet" href="./css/greenvillemiddle.css">
 <link rel="stylesheet" href="./css/greenville.css">
 
+<style>
+a li
+{
+font-size: 10pt;
+}
+</style>
 </head>
 
 <body>
