--- a/project/part5/deployments/deployments.html
+++ b/project/part5/deployments/deployments.html
@@ -13,7 +13,12 @@
 <link rel="stylesheet" href="./css/layout.css">
 <link rel="stylesheet" href="./css/greenvillemiddle.css">
 <link rel="stylesheet" href="./css/greenville.css">
-
+<style>
+a li
+{
+font-size: 10pt;
+}
+</style>
 </head>
 
 <body>
