--- a/project/part5/licensing/licensing.html
+++ b/project/part5/licensing/licensing.html
@@ -77,8 +77,8 @@ font-size: 10pt;
 <nav>
         <ul class="menu">
         <li><a href="#">Licenses</a></li>
-        <li><a href="deployments.html">Deployments</a></li>
-        <li><a href="../pricing/pricing.html">Pricing</a></li>
+        <li><a href="../deployments/deployments.html">Deployments</a></li>
+        <li><a href="../pricing/wizard.html">Pricing</a></li>
         <li><a href="../contacts.html">Contact Sales</a></li>
         </ul>
 </nav>
