--- a/project/part5/deployments/deployments.html
+++ b/project/part5/deployments/deployments.html
@@ -76,8 +76,8 @@ font-size: 10pt;
 <nav>
     <ul class="menu">
         <li><a href="../licensing/licensing.html">Licenses</a></li>
-        <li><a href="deployments.html">Deployments</a></li>
-        <li><a href="../pricing/pricing.html">Pricing</a></li>
+        <li><a href="#">Deployments</a></li>
+        <li><a href="../pricing/wizard.html">Pricing</a></li>
         <li><a href="../contacts.html">Contact Sales</a></li>
     </ul>
 </nav>
