--- a/project/part5/pricing/wizard.html
+++ b/project/part5/pricing/wizard.html
@@ -125,13 +125,18 @@ font-size: 10pt;
             <a href="../login.html">Login</a>
             <a href="../logout.html">Logout</a>
             <a href="../welcome.html">Welcome</a>
-            <a href="../products.html">All Products</a>
-            <a href="../licensetypes.html">LicenseTypes</a>
-            <a href="../mylicenselogs.html">LicenseLogs</a>
-            <a href="../mylicenses.html">MyLicenses</a>
-            <a href="../mycart.html?uid=1">MyCart</a>
+            <a href="../licenses.html">Licenses</a>
+            <a href="../deployments.html">Deployments</a>
             <a href="../reviews.html">AllReviews</a>
-            <a href="../help.html">Help</a>
+            <a href="../mylicenselogs.html">MyLicenseLogs</a>
+            <a href="../mylicenses.html">MyLicenses</a>
+            <a href="../pricing/wizard.html">PricingWizard</a>
+            <a href="../mycart.html?uid=1">MyCart</a>
+            <a href="../myprofile.html">MyProfile</a>
+            <a href="../testimonials.html">AdminTestimonials</a>
+            <a href="../products.html">AdminProducts</a>
+            <a href="../licensetypes.html">AdminLicenseTypes</a>
+            <a href="../template.html">AdminPageTemplate</a>
         </div>
     </div>
 
