--- a/project/part5/userhelp.html
+++ b/project/part5/userhelp.html
@@ -72,7 +72,7 @@
 </style>
 </head>
 
-<body>
+<body bgcolor="white">
 
 <!-- TOP NAV (same as wizard) -->
 <div class="topnav">
@@ -108,14 +108,43 @@
     <h1>User Help & Support</h1>
     <span>Get assistance with licensing, deployment, pricing, and account issues.</span>
 </header>
+<nav>
+    <ul class="menu">
+        <li><a href="licenses6.html">Products</a></li>
 
-<div class="help-container">
+        <li class="dropdown">
+            <a href="./deployments/deployments.html">Deployment ▾</a>
+            <ul class="dropdown-content">
+                <li><a href="./deployments/deployments.html">Deployment Options</a></li>
+            </ul>
+        </li>
+
+        <li class="dropdown">
+            <a href="./licensing/licensing.html">Licensing ▾</a>
+            <ul class="dropdown-content">
+                <li><a href="./licensing/licensing.html">Licensing Portal Pages</a></li>
+            </ul>
+        </li>
+
+        <!-- ⭐ NEW PRICING MENU -->
+        <li class="dropdown">
+            <a href="./pricing/wizard.html">Pricing ▾</a>
+            <ul class="dropdown-content">
+                <li><a href="./pricing/wizard.html">All Licenses</a></li>
+                <li><a href="./pricing/wizard.html">Wizard</a></li>
+            </ul>
+        </li>
+
+        <li><a href="contacts.html">Contact Sales</a></li>
+    </ul>
+</nav>
 <div class="pageheader">
         <hr>
         <span align="center"><h4>Enterprise Help</h4></span>
         <hr>
     </div>
-        
+    <div class="help-container">
+       
     <div class="help-header">
         <h2>Help Overview</h2>
         <p>
