--- a/project/part5/userhelp.html
+++ b/project/part5/userhelp.html
@@ -146,10 +146,8 @@
     <div class="help-container">
        
     <div class="help-header">
-        <h2>Help Overview</h2>
+        <h2>Support Options</h2>
         <p>
-            We have a number of support options for your products. Visit <a href="https://www.greenvilleassociates.com" target="_blank">GreenvilleAssociates.com</a> for more information
-            and our support sites which are listed below:
             <ol>
                 <li>wiki.greenvilleassociates.com - Standard Top Questions & Answers</li>
                 <li>support.greenvilleassociates.com - Community Support Forums</li>
